Update azure-pipelines.yml for Azure Pipelines
* updated the subscription name.

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,5 +1,5 @@
 variables:
-  azureSubscription: VOSDefaultDevOps
+  azureSubscription: VOSDevOps
   resourcegroup: insurance-isg-devops-demo
   location: 'East US'
   ImageName: website
